--- a/CarRental/CarRental.csproj
+++ b/CarRental/CarRental.csproj
@@ -157,6 +157,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\WypozyczalniesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -257,9 +258,12 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Wypozyczalnies\Create.cshtml" />
+    <Content Include="Views\Wypozyczalnies\Delete.cshtml" />
+    <Content Include="Views\Wypozyczalnies\Details.cshtml" />
+    <Content Include="Views\Wypozyczalnies\Edit.cshtml" />
+    <Content Include="Views\Wypozyczalnies\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
